2010-02-15  vadim  <vadim@vk.crocodile.org>

	* XMLTools.h (libfwbuilder): definition of XMLFREEBUFF moved to
	libfwbuilder-config.h

2010-02-15  glitch.vk.crocodile.org  <vadim@vk.crocodile.org>

	* FWObjectDatabase.cpp (FWObjectDatabase::load): working on memory
	leaks with the help of valgrind. Refs fwbuilder:ticket:1229

2010-02-14  glitch.vk.crocodile.org  <vadim@vk.crocodile.org>

	* Management.cpp (SNMPManagement::fromXML): refs fwbuilder:ticket:1229
	memory leak problems

2010-02-02  vadim  <vadim@vk.crocodile.org>

	* fwbuilder/ObjectMatcher.h (libfwbuilder): reimplemented ObjectMatcher
	class using generic base class Dispatch

	* fwbuilder/Dispatch.h (__DECLARE_DISPATCH_METHODS): generic class
	that implements double dispatch pattern. Helps avoid long chains
	of if-then-else statements that compare object type names.
	Refs fwbuilder:ticket:1186

	* Interface.cpp (Interface::isLoopback): method isLoopback() will
	return true for cluster interface that has no ip address of its
	own but is mapped to loopback interfaces of cluster members.

2010-01-31  vadim  <vadim@vk.crocodile.org>

	* ClusterGroup.cpp (ClusterGroup::getInterfaceForMemberFirewall):
	added a method for the often used pattern. See fwbuilder:ticket:1184
	for the reference of other changes in fwbuilder that prompted this.

2010-01-30  vadim  <vadim@vk.crocodile.org>

	* PolicyCompiler.cpp (PolicyCompiler::prolog): do not remove
	disabled rules in prolog() because some compilers might use
	RuleSet::insertRuleAtTop() and other similar methods from prolog()
	or addPredefinedPolicyRules() and these methods renumber rules. As
	the result, labels stop matching rule positions when this is done
	because labels are configured in prolog() method of the base
	class. See fwbuilder ticket 1173. Instead of dropping disabled
	rules in prolog(), will keep them  and drop them in rule processor
	Begin which is always the first in all compilers.

2010-01-25  vadim  <vadim@vk.crocodile.org>
